--- a/nimFinLib.html
+++ b/nimFinLib.html
@@ -1516,7 +1516,7 @@ showTimeseries takes a Ts object as input as well as a header string for the dat
 <dt id="stockDf"><a name="stockDf,Df"></a><pre><span class="Keyword">proc</span> <span class="Identifier">stockDf</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">dx</span><span class="Other">:</span> <span class="Identifier">Df</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">string</span></pre></dt>
 <dd>
 <p>stockDf</p>
-<p>get the stock name from a Df object and return as string (will be deprecated shortly) (</p>
+<p>get the stock name from a Df object and return as string (will be deprecated shortly) </p>
 
 
 </dd>
@@ -1815,7 +1815,7 @@ msgX templates convenience templates for colored text output the assumption is t
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br>
-        <small>Made with Nim. Generated: 2015-06-21 13:36:09 UTC</small>
+        <small>Made with Nim. Generated: 2015-06-21 13:38:36 UTC</small>
       </div>
     </div>
   </div>
