--- a/nimFinLib.html
+++ b/nimFinLib.html
@@ -1854,6 +1854,8 @@ msggb<pre><span class="Identifier">msggb</span><span class="Punctuation">(</span
 </dd>
 <dt id="hdx"><a name="hdx.t,stmt"></a><pre><span class="Keyword">template</span> <span class="Identifier">hdx</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">code</span><span class="Other">:</span> <span class="Identifier">stmt</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">stmt</span> <span class="Other">{.</span><span class="Identifier">immediate</span><span class="Other">.}</span></pre></dt>
 <dd>
+<p>hdx</p>
+<p>hdx is use for headers to make them stand out </p>
 
 
 </dd>
@@ -1867,7 +1869,7 @@ msggb<pre><span class="Identifier">msggb</span><span class="Punctuation">(</span
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br>
-        <small>Made with Nim. Generated: 2015-06-21 13:57:03 UTC</small>
+        <small>Made with Nim. Generated: 2015-06-21 14:00:45 UTC</small>
       </div>
     </div>
   </div>
