--- a/nimFinLib.html
+++ b/nimFinLib.html
@@ -1565,7 +1565,8 @@ showTimeseries takes a Ts object as input as well as a header string for the dat
 <p>showCurrentStocks</p>
 <p>callable display routine for currentStocks with Nf portfolio object passed in</p>
 <pre><span class="Identifier">showCurrentStocks</span><span class="Punctuation">(</span><span class="Identifier">myAccount</span><span class="Operator">.</span><span class="Identifier">Portfolio</span><span class="Punctuation">[</span><span class="DecNumber">0</span><span class="Punctuation">]</span><span class="Punctuation">)</span></pre><p>This means get all stock codes of the first portfolio in myAccount</p>
-<p>Note : Yahoo servers maybe down sometimes which will make this procs fail . Just wait a bit and try again. Stay calm ! Do not panic !</p>
+<p>Note : Yahoo servers maybe down sometimes which will make this procs fail.</p>
+<p>Just wait a bit and try again. Stay calm ! Do not panic !</p>
 <p>for full example see nimFinT5.nim </p>
 
 
@@ -1575,7 +1576,7 @@ showTimeseries takes a Ts object as input as well as a header string for the dat
 <p>showCurrentStocks</p>
 <p>callable display routine for currentStocks with stockstring passed in</p>
 <pre><span class="Identifier">showCurrentStocks</span><span class="Punctuation">(</span><span class="StringLit">&quot;IBM+BP.L+0001.HK&quot;</span><span class="Punctuation">)</span>
-<span class="Identifier">decho</span><span class="Punctuation">(</span><span class="DecNumber">2</span><span class="Punctuation">)</span></pre><p>Note : Yahoo servers maybe down sometimes which will make this procs fail . Just wait a bit and try again. Stay calm ! Do not panic ! </p>
+<span class="Identifier">decho</span><span class="Punctuation">(</span><span class="DecNumber">2</span><span class="Punctuation">)</span></pre><p>Note : Yahoo servers maybe down sometimes which will make this procs fail. Just wait a bit and try again. Stay calm ! Do not panic ! </p>
 
 
 </dd>
@@ -1876,7 +1877,7 @@ msggb<pre><span class="Identifier">msggb</span><span class="Punctuation">(</span
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br>
-        <small>Made with Nim. Generated: 2015-06-21 21:59:51 UTC</small>
+        <small>Made with Nim. Generated: 2015-06-21 22:07:08 UTC</small>
       </div>
     </div>
   </div>
