--- a/nimFinLib.html
+++ b/nimFinLib.html
@@ -1576,7 +1576,8 @@ showTimeseries takes a Ts object as input as well as a header string for the dat
 <p>showCurrentStocks</p>
 <p>callable display routine for currentStocks with stockstring passed in</p>
 <pre><span class="Identifier">showCurrentStocks</span><span class="Punctuation">(</span><span class="StringLit">&quot;IBM+BP.L+0001.HK&quot;</span><span class="Punctuation">)</span>
-<span class="Identifier">decho</span><span class="Punctuation">(</span><span class="DecNumber">2</span><span class="Punctuation">)</span></pre><p>Note : Yahoo servers maybe down sometimes which will make this procs fail. Just wait a bit and try again. Stay calm ! Do not panic ! </p>
+<span class="Identifier">decho</span><span class="Punctuation">(</span><span class="DecNumber">2</span><span class="Punctuation">)</span></pre><p>Note : Yahoo servers maybe down sometimes which will make this procs fail.</p>
+<p>Just wait a bit and try again. Stay calm ! Do not panic ! </p>
 
 
 </dd>
@@ -1877,7 +1878,7 @@ msggb<pre><span class="Identifier">msggb</span><span class="Punctuation">(</span
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br>
-        <small>Made with Nim. Generated: 2015-06-21 22:07:08 UTC</small>
+        <small>Made with Nim. Generated: 2015-06-21 22:09:13 UTC</small>
       </div>
     </div>
   </div>
