--- a/nimFinLib.html
+++ b/nimFinLib.html
@@ -1267,6 +1267,8 @@ dt pre > span.Operator ~ span.Identifier, dt pre > span.Operator ~ span.Operator
     title="intervalmonths*(startDate, endDate: string): float"><wbr />intervalmonths</a></li>
   <li><a class="reference" href="#intervalyears,string,string"
     title="intervalyears*(startDate, endDate: string): float"><wbr />intervalyears</a></li>
+  <li><a class="reference" href="#sleepy,float"
+    title="sleepy*(s: float)"><wbr />sleepy</a></li>
   <li><a class="reference" href="#getSymbol2,string,string,string"
     title="getSymbol2*(symb, startDate, endDate: string): Df"><wbr />get<wbr />Symbol2</a></li>
   <li><a class="reference" href="#showhistData,Df,int"
@@ -1654,6 +1656,15 @@ interval procs returns time elapsed between two dates in secs,hours etc.
 
 
 </dd>
+<dt id="sleepy"><a name="sleepy,float"></a><pre><span class="Keyword">proc</span> <span class="Identifier">sleepy</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <span class="Identifier">float</span><span class="Other">)</span></pre></dt>
+<dd>
+<p>sleepy</p>
+<p>a sleep function to delay execution</p>
+<p>usefull if fetching hundreds of stock codes or quotes from yahoo</p>
+<p>in a loop in order not to hit the servers too hard. </p>
+
+
+</dd>
 <dt id="getSymbol2"><a name="getSymbol2,string,string,string"></a><pre><span class="Keyword">proc</span> <span class="Identifier">getSymbol2</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">symb</span><span class="Other">,</span> <span class="Identifier">startDate</span><span class="Other">,</span> <span class="Identifier">endDate</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">Df</span></pre></dt>
 <dd>
 <p>getSymbol2</p>
@@ -1878,7 +1889,7 @@ msggb<pre><span class="Identifier">msggb</span><span class="Punctuation">(</span
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br>
-        <small>Made with Nim. Generated: 2015-06-21 22:09:13 UTC</small>
+        <small>Made with Nim. Generated: 2015-06-22 20:31:26 UTC</small>
       </div>
     </div>
   </div>
