--- a/nimFinLib.html
+++ b/nimFinLib.html
@@ -1414,7 +1414,7 @@ Nf type holds one portfolio with all relevant historic stocks data
   <span class="Identifier">rca</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">Runningstat</span><span class="Other">]</span>      <span class="Comment">## RunningStat for adjusted close price</span>
   </pre></dt>
 <dd>
-Df type holds individual stocks history data and RunningStat for close and adj.close even more items may be added like full company name etc in the future items are stock code, ohlcva, rc and rca . 
+Df type holds individual stocks history data and RunningStat for ohlcva columns even more items may be added like full company name etc in the future items are stock code, ohlcva, rc and rca . 
 
 </dd>
 <dt id="Ts"><a name="Ts"></a><pre><span class="Identifier">Ts</span><span class="Operator">*</span> <span class="Other">{.</span><span class="Identifier">inheritable</span><span class="Other">.}</span> <span class="Other">=</span> <span class="Keyword">object</span> 
@@ -1927,7 +1927,7 @@ msggb<pre><span class="Identifier">msggb</span><span class="Punctuation">(</span
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br>
-        <small>Made with Nim. Generated: 2015-06-24 21:31:42 UTC</small>
+        <small>Made with Nim. Generated: 2015-06-24 21:32:56 UTC</small>
       </div>
     </div>
   </div>
