--- a/nimFinLib.html
+++ b/nimFinLib.html
@@ -1233,8 +1233,6 @@ dt pre > span.Operator ~ span.Identifier, dt pre > span.Operator ~ span.Operator
     title="getTerminalWidth*(): int"><wbr />get<wbr />Terminal<wbr />Width</a></li>
   <li><a class="reference" href="#decho,int"
     title="decho*(z: int)"><wbr />decho</a></li>
-  <li><a class="reference" href="#stockDf,Df"
-    title="stockDf*(dx: Df): string"><wbr />stock<wbr />Df</a></li>
   <li><a class="reference" href="#buildStockString,Nf"
     title="buildStockString*(apf: Nf): string"><wbr />build<wbr />Stock<wbr />String</a></li>
   <li><a class="reference" href="#buildStockString,seq[Df]"
@@ -1535,18 +1533,11 @@ showTimeseries takes a Ts object as input as well as a header string for the dat
 
 
 </dd>
-<dt id="decho"><a name="decho,int"></a><pre><span class="Keyword">proc</span> <span class="Identifier">decho</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">z</span><span class="Other">:</span> <span class="Identifier">int</span><span class="Other">)</span> <span class="Other">{.</span><span class="Identifier">discardable</span><span class="Other">.}</span></pre></dt>
+<dt id="decho"><a name="decho,int"></a><pre><span class="Keyword">proc</span> <span class="Identifier">decho</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">z</span><span class="Other">:</span> <span class="Identifier">int</span><span class="Other">)</span></pre></dt>
 <dd>
 <p>decho</p>
 <p>blank lines creator</p>
 <pre><span class="Identifier">decho</span><span class="Punctuation">(</span><span class="DecNumber">10</span><span class="Punctuation">)</span></pre><p>to create 10 blank lines   </p>
-
-
-</dd>
-<dt id="stockDf"><a name="stockDf,Df"></a><pre><span class="Keyword">proc</span> <span class="Identifier">stockDf</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">dx</span><span class="Other">:</span> <span class="Identifier">Df</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">string</span></pre></dt>
-<dd>
-<p>stockDf</p>
-<p>get the stock name from a Df object and return as string (will be deprecated shortly) </p>
 
 
 </dd>
@@ -1715,14 +1706,14 @@ interval procs returns time elapsed between two dates in secs,hours etc.
 
 
 </dd>
-<dt id="showhistData"><a name="showhistData,Df,int"></a><pre><span class="Keyword">proc</span> <span class="Identifier">showhistData</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">adf</span><span class="Other">:</span> <span class="Identifier">Df</span><span class="Other">;</span> <span class="Identifier">n</span><span class="Other">:</span> <span class="Identifier">int</span><span class="Other">)</span> <span class="Other">{.</span><span class="Identifier">discardable</span><span class="Other">.}</span></pre></dt>
+<dt id="showhistData"><a name="showhistData,Df,int"></a><pre><span class="Keyword">proc</span> <span class="Identifier">showhistData</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">adf</span><span class="Other">:</span> <span class="Identifier">Df</span><span class="Other">;</span> <span class="Identifier">n</span><span class="Other">:</span> <span class="Identifier">int</span><span class="Other">)</span></pre></dt>
 <dd>
 <p>showhistData</p>
 <p>Show n recent rows historical stock data</p>
 
 
 </dd>
-<dt id="showhistData"><a name="showhistData,Df,string,string"></a><pre><span class="Keyword">proc</span> <span class="Identifier">showhistData</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">adf</span><span class="Other">:</span> <span class="Identifier">Df</span><span class="Other">;</span> <span class="Identifier">s</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">e</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span> <span class="Other">{.</span><span class="Identifier">discardable</span><span class="Other">.}</span></pre></dt>
+<dt id="showhistData"><a name="showhistData,Df,string,string"></a><pre><span class="Keyword">proc</span> <span class="Identifier">showhistData</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">adf</span><span class="Other">:</span> <span class="Identifier">Df</span><span class="Other">;</span> <span class="Identifier">s</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">e</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span></pre></dt>
 <dd>
 <p>showhistData</p>
 <p>show historical stock data between 2 dates</p>
@@ -1768,7 +1759,7 @@ head means oldest rows
 
 
 </dd>
-<dt id="showdailyReturnsCl"><a name="showdailyReturnsCl,Df,int"></a><pre><span class="Keyword">proc</span> <span class="Identifier">showdailyReturnsCl</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <span class="Identifier">Df</span><span class="Other">;</span> <span class="Identifier">N</span><span class="Other">:</span> <span class="Identifier">int</span><span class="Other">)</span> <span class="Other">{.</span><span class="Identifier">discardable</span><span class="Other">.}</span></pre></dt>
+<dt id="showdailyReturnsCl"><a name="showdailyReturnsCl,Df,int"></a><pre><span class="Keyword">proc</span> <span class="Identifier">showdailyReturnsCl</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <span class="Identifier">Df</span><span class="Other">;</span> <span class="Identifier">N</span><span class="Other">:</span> <span class="Identifier">int</span><span class="Other">)</span></pre></dt>
 <dd>
 <p>showdailyReturnsCl</p>
 <p>display returns based on close price</p>
@@ -1776,7 +1767,7 @@ head means oldest rows
 
 
 </dd>
-<dt id="showdailyReturnsAdCl"><a name="showdailyReturnsAdCl,Df,int"></a><pre><span class="Keyword">proc</span> <span class="Identifier">showdailyReturnsAdCl</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <span class="Identifier">Df</span><span class="Other">;</span> <span class="Identifier">N</span><span class="Other">:</span> <span class="Identifier">int</span><span class="Other">)</span> <span class="Other">{.</span><span class="Identifier">discardable</span><span class="Other">.}</span></pre></dt>
+<dt id="showdailyReturnsAdCl"><a name="showdailyReturnsAdCl,Df,int"></a><pre><span class="Keyword">proc</span> <span class="Identifier">showdailyReturnsAdCl</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <span class="Identifier">Df</span><span class="Other">;</span> <span class="Identifier">N</span><span class="Other">:</span> <span class="Identifier">int</span><span class="Other">)</span></pre></dt>
 <dd>
 <p>showdailyReturnsAdCl</p>
 <p>returns based on adjusted close price</p>
@@ -1798,7 +1789,7 @@ head means oldest rows
 
 
 </dd>
-<dt id="statistics"><a name="statistics,Runningstat"></a><pre><span class="Keyword">proc</span> <span class="Identifier">statistics</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">x</span><span class="Other">:</span> <span class="Identifier">Runningstat</span><span class="Other">)</span> <span class="Other">{.</span><span class="Identifier">discardable</span><span class="Other">.}</span></pre></dt>
+<dt id="statistics"><a name="statistics,Runningstat"></a><pre><span class="Keyword">proc</span> <span class="Identifier">statistics</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">x</span><span class="Other">:</span> <span class="Identifier">Runningstat</span><span class="Other">)</span></pre></dt>
 <dd>
 <p>statistics</p>
 <p>display statistsics output of a runningstat object </p>
@@ -1823,14 +1814,14 @@ head means oldest rows
 <dt id="ema"><a name="ema,Df,int"></a><pre><span class="Keyword">proc</span> <span class="Identifier">ema</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">dx</span><span class="Other">:</span> <span class="Identifier">Df</span><span class="Other">;</span> <span class="Identifier">N</span><span class="Other">:</span> <span class="Identifier">int</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">Ts</span></pre></dt>
 <dd>
 <p>ema</p>
-<p>exponential moving average</p>
+<p>exponential moving average based on close price</p>
 <p>returns a Ts object loaded with date,ema pairs</p>
 <p>calling with Df object and number of days for moving average</p>
 <p>results match R quantmod/TTR </p>
 
 
 </dd>
-<dt id="showEma"><a name="showEma,Ts,int"></a><pre><span class="Keyword">proc</span> <span class="Identifier">showEma</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">emx</span><span class="Other">:</span> <span class="Identifier">Ts</span><span class="Other">;</span> <span class="Identifier">N</span><span class="Other">:</span> <span class="Identifier">int</span><span class="Other">)</span> <span class="Other">{.</span><span class="Identifier">discardable</span><span class="Other">.}</span></pre></dt>
+<dt id="showEma"><a name="showEma,Ts,int"></a><pre><span class="Keyword">proc</span> <span class="Identifier">showEma</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">emx</span><span class="Other">:</span> <span class="Identifier">Ts</span><span class="Other">;</span> <span class="Identifier">N</span><span class="Other">:</span> <span class="Identifier">int</span><span class="Other">)</span></pre></dt>
 <dd>
 <p>showEma</p>
 <p>convenience proc to display ema series with dates</p>
@@ -1851,7 +1842,7 @@ head means oldest rows
 <span class="Identifier">echo</span><span class="Punctuation">(</span><span class="Punctuation">)</span></pre>
 
 </dd>
-<dt id="showCurrentForex"><a name="showCurrentForex,seq[string]"></a><pre><span class="Keyword">proc</span> <span class="Identifier">showCurrentForex</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">curs</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">string</span><span class="Other">]</span><span class="Other">)</span> <span class="Other">{.</span><span class="Identifier">discardable</span><span class="Other">.}</span></pre></dt>
+<dt id="showCurrentForex"><a name="showCurrentForex,seq[string]"></a><pre><span class="Keyword">proc</span> <span class="Identifier">showCurrentForex</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">curs</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">string</span><span class="Other">]</span><span class="Other">)</span></pre></dt>
 <dd>
 <p>showCurrentForex</p>
 <p>a convenience proc to display exchange rates</p>
@@ -1946,7 +1937,7 @@ msggb<pre><span class="Identifier">msggb</span><span class="Punctuation">(</span
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br>
-        <small>Made with Nim. Generated: 2015-06-25 10:00:11 UTC</small>
+        <small>Made with Nim. Generated: 2015-06-25 12:21:27 UTC</small>
       </div>
     </div>
   </div>
