--- a/private.html
+++ b/private.html
@@ -1166,6 +1166,14 @@ dt pre > span.Operator ~ span.Identifier, dt pre > span.Operator ~ span.Operator
   </ul>
 </li>
 <li>
+  <a class="reference reference-toplevel" href="#9" id="59">Lets</a>
+  <ul class="simple simple-toc-section">
+      <li><a class="reference" href="#start"
+    title="start* = epochTime()"><wbr />start</a></li>
+
+  </ul>
+</li>
+<li>
   <a class="reference reference-toplevel" href="#12" id="62">Procs</a>
   <ul class="simple simple-toc-section">
       <li><a class="reference" href="#getTerminalWidth,"
@@ -1200,10 +1208,8 @@ dt pre > span.Operator ~ span.Identifier, dt pre > span.Operator ~ span.Operator
     title="validdate*(adate: string): bool"><wbr />validdate</a></li>
   <li><a class="reference" href="#compareDates,string,string"
     title="compareDates*(startDate, endDate: string): int"><wbr />compare<wbr />Dates</a></li>
-  <li><a class="reference" href="#sleepy,int"
-    title="sleepy*(s: int)"><wbr />sleepy</a></li>
-  <li><a class="reference" href="#sleepy,float"
-    title="sleepy*(s: float)"><wbr />sleepy</a></li>
+  <li><a class="reference" href="#sleepy,T"
+    title="sleepy*[T: float | int](s: T)"><wbr />sleepy</a></li>
   <li><a class="reference" href="#plusDays,string,int"
     title="plusDays*(aDate: string; days: int): string"><wbr />plus<wbr />Days</a></li>
   <li><a class="reference" href="#minusDays,string,int"
@@ -1282,6 +1288,16 @@ dt pre > span.Operator ~ span.Identifier, dt pre > span.Operator ~ span.Operator
 
 </dd>
 <dt id="aline"><a name="aline"></a><pre><span class="Identifier">aline</span><span class="Operator">*</span> <span class="Other">=</span> <span class="Identifier">repeat</span><span class="Other">(</span><span class="StringLit">&quot;-&quot;</span><span class="Other">,</span> <span class="Identifier">tw</span><span class="Other">)</span></pre></dt>
+<dd>
+
+
+</dd>
+
+</dl></div>
+<div class="section" id="9">
+<h1><a class="toc-backref" href="#9">Lets</a></h1>
+<dl class="item">
+<dt id="start"><a name="start"></a><pre><span class="Identifier">start</span><span class="Operator">*</span> <span class="Other">=</span> <span class="Identifier">epochTime</span><span class="Other">(</span><span class="Other">)</span></pre></dt>
 <dd>
 
 
@@ -1385,15 +1401,7 @@ interval procs returns time elapsed between two dates in secs,hours etc.
 
 
 </dd>
-<dt id="sleepy"><a name="sleepy,int"></a><pre><span class="Keyword">proc</span> <span class="Identifier">sleepy</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <span class="Identifier">int</span><span class="Other">)</span></pre></dt>
-<dd>
-<p>sleepy</p>
-<p>a sleep function to delay execution</p>
-<p>sleep(0.5)  # secs </p>
-
-
-</dd>
-<dt id="sleepy"><a name="sleepy,float"></a><pre><span class="Keyword">proc</span> <span class="Identifier">sleepy</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <span class="Identifier">float</span><span class="Other">)</span></pre></dt>
+<dt id="sleepy"><a name="sleepy,T"></a><pre><span class="Keyword">proc</span> <span class="Identifier">sleepy</span><span class="Operator">*</span><span class="Other">[</span><span class="Identifier">T</span><span class="Other">:</span> <span class="Identifier">float</span> <span class="Operator">|</span> <span class="Identifier">int</span><span class="Other">]</span><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <span class="Identifier">T</span><span class="Other">)</span></pre></dt>
 <dd>
 
 
@@ -1540,7 +1548,7 @@ msgX templates convenience templates for colored text output the assumption is t
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br>
-        <small>Made with Nim. Generated: 2015-07-01 16:54:52 UTC</small>
+        <small>Made with Nim. Generated: 2015-07-02 15:50:35 UTC</small>
       </div>
     </div>
   </div>
