--- a/private.html
+++ b/private.html
@@ -1258,6 +1258,8 @@ dt pre > span.Operator ~ span.Identifier, dt pre > span.Operator ~ span.Operator
     title="msgb*(code: stmt): stmt"><wbr />msgb</a></li>
   <li><a class="reference" href="#hdx.t,stmt"
     title="hdx*(code: stmt): stmt"><wbr />hdx</a></li>
+  <li><a class="reference" href="#withFile.t,expr,string,FileMode,stmt"
+    title="withFile*(f: expr; filename: string; mode: FileMode; body: stmt): stmt"><wbr />with<wbr />File</a></li>
 
   </ul>
 </li>
@@ -1324,6 +1326,9 @@ dt pre > span.Operator ~ span.Identifier, dt pre > span.Operator ~ span.Operator
 </dd>
 <dt id="rainbow"><a name="rainbow,string"></a><pre><span class="Keyword">proc</span> <span class="Identifier">rainbow</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">astr</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span></pre></dt>
 <dd>
+<p>rainbow</p>
+<p>multicolored string</p>
+<p>may not work with certain Rune </p>
 
 
 </dd>
@@ -1574,6 +1579,48 @@ msgX templates convenience templates for colored text output the assumption is t
 
 
 </dd>
+<dt id="withFile"><a name="withFile.t,expr,string,FileMode,stmt"></a><pre><span class="Keyword">template</span> <span class="Identifier">withFile</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">f</span><span class="Other">:</span> <span class="Identifier">expr</span><span class="Other">;</span> <span class="Identifier">filename</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">mode</span><span class="Other">:</span> <span class="Identifier">FileMode</span><span class="Other">;</span> <span class="Identifier">body</span><span class="Other">:</span> <span class="Identifier">stmt</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">stmt</span> <span class="Other">{.</span>
+    <span class="Identifier">immediate</span><span class="Other">.}</span></pre></dt>
+<dd>
+<p>withFile</p>
+<p>similar functionality to python's withFile .. code-block:: nim</p>
+<blockquote><p>let curFile=&quot;/data5/notes.txt&quot;  # some file<dl class="docutils"><dt>withFile(txt, curFile, fmRead):</dt>
+<dd><dl class="docutils"><dt>while 1 == 1:</dt>
+<dd><dl class="docutils"><dt>try:</dt>
+<dd>stdout.writeln(txt.readLine())   # do something with the lines</dd>
+<dt>except:</dt>
+<dd>break</dd>
+</dl>
+</dd>
+</dl>
+</dd>
+</dl>
+<p>echo() msgg() do : rainbow(&quot;Finished&quot;) echo()</p>
+</p></blockquote>
+<pre><span class="Keyword">import</span> <span class="Identifier">private</span><span class="Punctuation">,</span><span class="Identifier">strutils</span><span class="Punctuation">,</span><span class="Identifier">strfmt</span>
+
+<span class="Keyword">let</span> <span class="Identifier">curFile</span><span class="Operator">=</span><span class="StringLit">&quot;/data5/notes.txt&quot;</span>
+<span class="Keyword">var</span> <span class="Identifier">lc</span> <span class="Operator">=</span> <span class="DecNumber">0</span>
+<span class="Keyword">var</span> <span class="Identifier">oc</span> <span class="Operator">=</span> <span class="DecNumber">0</span>
+<span class="Identifier">withFile</span><span class="Punctuation">(</span><span class="Identifier">txt</span><span class="Punctuation">,</span> <span class="Identifier">curFile</span><span class="Punctuation">,</span> <span class="Identifier">fmRead</span><span class="Punctuation">)</span><span class="Punctuation">:</span>
+       <span class="Keyword">while</span> <span class="DecNumber">1</span> <span class="Operator">==</span> <span class="DecNumber">1</span><span class="Punctuation">:</span>
+           <span class="Keyword">try</span><span class="Punctuation">:</span>
+              <span class="Identifier">inc</span> <span class="Identifier">lc</span>
+              <span class="Keyword">var</span> <span class="Identifier">al</span> <span class="Operator">=</span> <span class="Operator">$</span><span class="Identifier">txt</span><span class="Operator">.</span><span class="Identifier">readline</span><span class="Punctuation">(</span><span class="Punctuation">)</span>
+              <span class="Keyword">var</span> <span class="Identifier">sw</span> <span class="Operator">=</span> <span class="StringLit">&quot;it&quot;</span>
+              <span class="Keyword">if</span> <span class="Identifier">al</span><span class="Operator">.</span><span class="Identifier">contains</span><span class="Punctuation">(</span><span class="Identifier">sw</span><span class="Punctuation">)</span> <span class="Operator">==</span> <span class="Identifier">true</span><span class="Punctuation">:</span>
+                 <span class="Identifier">inc</span> <span class="Identifier">oc</span>
+                 <span class="Identifier">msgy</span><span class="Punctuation">(</span><span class="Punctuation">)</span> <span class="Keyword">do</span><span class="Punctuation">:</span> <span class="Identifier">write</span><span class="Punctuation">(</span><span class="Identifier">stdout</span><span class="Punctuation">,</span><span class="StringLit">&quot;{:&lt;8}{:&gt;6} {:&lt;7}{:&gt;6}  &quot;</span><span class="Operator">.</span><span class="Identifier">fmt</span><span class="Punctuation">(</span><span class="StringLit">&quot;Line :&quot;</span><span class="Punctuation">,</span><span class="Identifier">lc</span><span class="Punctuation">,</span><span class="StringLit">&quot;Count :&quot;</span><span class="Punctuation">,</span><span class="Identifier">oc</span><span class="Punctuation">)</span><span class="Punctuation">)</span>
+                 <span class="Identifier">dhlecho</span><span class="Punctuation">(</span><span class="Identifier">al</span><span class="Punctuation">,</span><span class="Identifier">sw</span><span class="Punctuation">,</span><span class="StringLit">&quot;g&quot;</span><span class="Punctuation">)</span>
+                 <span class="Identifier">echo</span><span class="Punctuation">(</span><span class="Punctuation">)</span>
+           <span class="Keyword">except</span><span class="Punctuation">:</span>
+              <span class="Keyword">break</span>
+
+<span class="Identifier">echo</span><span class="Punctuation">(</span><span class="Punctuation">)</span>
+<span class="Identifier">msgg</span><span class="Punctuation">(</span><span class="Punctuation">)</span> <span class="Keyword">do</span> <span class="Punctuation">:</span> <span class="Identifier">rainbow</span><span class="Punctuation">(</span><span class="StringLit">&quot;Finished&quot;</span><span class="Punctuation">)</span>
+<span class="Identifier">echo</span><span class="Punctuation">(</span><span class="Punctuation">)</span></pre>
+
+</dd>
 
 </dl></div>
 
@@ -1584,7 +1631,7 @@ msgX templates convenience templates for colored text output the assumption is t
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br>
-        <small>Made with Nim. Generated: 2015-07-04 15:51:24 UTC</small>
+        <small>Made with Nim. Generated: 2015-07-04 19:17:38 UTC</small>
       </div>
     </div>
   </div>
