--- a/private.html
+++ b/private.html
@@ -1605,7 +1605,7 @@ msgX templates convenience templates for colored text output the assumption is t
            <span class="Keyword">try</span><span class="Punctuation">:</span>
               <span class="Identifier">inc</span> <span class="Identifier">lc</span>
               <span class="Keyword">var</span> <span class="Identifier">al</span> <span class="Operator">=</span> <span class="Operator">$</span><span class="Identifier">txt</span><span class="Operator">.</span><span class="Identifier">readline</span><span class="Punctuation">(</span><span class="Punctuation">)</span>
-              <span class="Keyword">var</span> <span class="Identifier">sw</span> <span class="Operator">=</span> <span class="StringLit">&quot;it&quot;</span>
+              <span class="Keyword">var</span> <span class="Identifier">sw</span> <span class="Operator">=</span> <span class="StringLit">&quot;the&quot;</span>   <span class="Comment"># find all lines containing : the</span>
               <span class="Keyword">if</span> <span class="Identifier">al</span><span class="Operator">.</span><span class="Identifier">contains</span><span class="Punctuation">(</span><span class="Identifier">sw</span><span class="Punctuation">)</span> <span class="Operator">==</span> <span class="Identifier">true</span><span class="Punctuation">:</span>
                  <span class="Identifier">inc</span> <span class="Identifier">oc</span>
                  <span class="Identifier">msgy</span><span class="Punctuation">(</span><span class="Punctuation">)</span> <span class="Keyword">do</span><span class="Punctuation">:</span> <span class="Identifier">write</span><span class="Punctuation">(</span><span class="Identifier">stdout</span><span class="Punctuation">,</span><span class="StringLit">&quot;{:&lt;8}{:&gt;6} {:&lt;7}{:&gt;6}  &quot;</span><span class="Operator">.</span><span class="Identifier">fmt</span><span class="Punctuation">(</span><span class="StringLit">&quot;Line :&quot;</span><span class="Punctuation">,</span><span class="Identifier">lc</span><span class="Punctuation">,</span><span class="StringLit">&quot;Count :&quot;</span><span class="Punctuation">,</span><span class="Identifier">oc</span><span class="Punctuation">)</span><span class="Punctuation">)</span>
@@ -1629,7 +1629,7 @@ msgX templates convenience templates for colored text output the assumption is t
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br>
-        <small>Made with Nim. Generated: 2015-07-04 19:23:04 UTC</small>
+        <small>Made with Nim. Generated: 2015-07-04 19:26:06 UTC</small>
       </div>
     </div>
   </div>
